--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "npm": "6.14.7"
   },
   "scripts": {
-    "node": "node index.js"
+    "node": "node index.js",
+    "nodemon": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
