--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "scripts": {
     "node": "node index.js",
-    "nodemon": "nodemon index.js"
+    "backend": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dialogflow": "^1.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
