--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "6.14.7"
   },
   "scripts": {
+    "start": "node index.js",
     "node": "node index.js",
     "backend": "nodemon index.js"
   },
